<resources>
    <string name="app_name">Quitting Time</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="Grab_Location_Question">Let quitting time automatically set location?</string>

    <!-- The following strings are for the questions where we ask the user when they would like to recieve push notifications -->
    <string name="First_Question_Description">Choose the times when you would like to receive push notifications about deals in your area</string>
    <string name="Recommendation_First_Questions">We recommend the time around when you are done with work each day</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
